--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@ th,
 td {
   padding: 12px !important;
 }
+
+.item th,
+.item td {
+  padding: 4px 16px 4px 0px !important;
+}
+
+.item tr,
+.item td {
+  border: none !important;
+}
